<?xml version="1.0"?>
<package format="2">
    <name>rm_track</name>
    <version>0.1.0</version>
    <description>Track target according detection information</description>
    <maintainer email="liaoqiayuan@gmail.com">Qiayuan Liao</maintainer>
    <license>BSD</license>
    <author email="liaoqiayuan@gmail.com">Qiayuan Liao</author>

    <!-- buildtool_depend: dependencies of the build process -->
    <buildtool_depend>catkin</buildtool_depend>
    <!-- depend: build, export, and execution dependency -->
    <depend>roscpp</depend>
    <depend>roslint</depend>

    <depend>rm_msgs</depend>
    <depend>rm_common</depend>

    <depend>tf2_geometry_msgs</depend>
    <depend>apriltag_ros</depend>

</package>
